--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 <body>
 <form>
     <div class="edit"><label>Event Type:</label>
-    <select required>
-        <option selected>Choose one</option>
-        <option>Birthday</option>
-        <option>Marriage</option>
-        <option>JS Prom</option>
-        <option>Seminar on sex</option>
-        <option>Graduation</option>
-    </select><br>
-    <label>Event Title: </label><input type="text" required><br>
-    <label>Event Dates:<input type="date" required> To <input type="date"></label><br>
-    <label>Posting date: <input type="date" required></label><br>
+        <select id="" required>
+            <option disabled selected>Choose One: </option>
+            <option>Seminar on sexuality</option>
+            <option>Workshop on web develpoment</option>
+            <option>Birthday</option>
+            <option>Graduation</option>
+            <option>Baptism</option>
+          </select>><br>
+    <label>Event Title: </label><input type="text"  id="1" required><br>
+    <label>Event Dates:<input type="date" id="2" required> To <input type="date" id="4" required ></label><br>
+    <label>Posting date: <input type="date" id="3" required></label><br>
     <input type="checkbox">Is registration Required? <br>
     <input type="checkbox">Is this event associated with family programs <br>
     <input type="checkbox">Upon registration completion, Are Users to Receive an Auto Generated Email?<br>
