--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <form>
                 <label>Event Type:</label>
                     <select id="select" required>
-                        <option selected>Choose One:</option>
+                        <option>Choose One:</option>
                         <option>Seminar on sexuality</option>
                         <option>Workshop on web develpoment</option>
                         <option>Birthday</option>
